force-app/main/default/objects/Student__c/fields/Candidate_Roll_Number__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Roll_Number__c</fullName>
    <label>Candidate Roll Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>