force-app/main/default/objects/Student__c/fields/Tractor__c.field-meta.xml
<CustomField>
    <fullName>Tractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tractor</label>
    <referenceTo>Tractor__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>